[gd_scene load_steps=10 format=2]

[ext_resource path="res://demo/world.gd" type="Script" id=1]
[ext_resource path="res://demo/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/zone_loader.gd" type="Script" id=5]
[ext_resource path="res://scripts/zone_trigger.gd" type="Script" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 84.4297, 87.5218, 94.2749 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 93.1064, 87.5436, 98.6254 )

[sub_resource type="CylinderShape" id=3]
radius = 14.4242
height = 100.0

[sub_resource type="CylinderShape" id=4]
radius = 68.849
height = 191.773

[sub_resource type="BoxShape" id=5]
extents = Vector3( 194.998, 87.5436, 105.035 )

[node name="World" type="Spatial"]
script = ExtResource( 1 )
player_scene = ExtResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.742589, 0.498052, -0.447779, -0.258248, 0.829808, 0.494698, 0.617956, -0.251719, 0.744828, 0, 31.8574, 0 )
light_energy = 2.22
shadow_enabled = true
shadow_bias = 0.2

[node name="ZoneLoader" type="Spatial" parent="."]
script = ExtResource( 5 )
show_debug = true

[node name="Zone01" type="Area" parent="ZoneLoader"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 6 )
zone_path = "res://demo/zones/zone_01.tscn"

[node name="CollisionShape" type="CollisionShape" parent="ZoneLoader/Zone01"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -18.8995 )
shape = SubResource( 1 )

[node name="Zone02" type="Area" parent="ZoneLoader"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -150 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 6 )
zone_path = "res://demo/zones/zone_02.tscn"

[node name="CollisionShape" type="CollisionShape" parent="ZoneLoader/Zone02"]
shape = SubResource( 2 )

[node name="CollisionShape2" type="CollisionShape" parent="ZoneLoader/Zone02"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00438, -7.66248, 102.302 )
shape = SubResource( 3 )

[node name="CollisionShape3" type="CollisionShape" parent="ZoneLoader/Zone02"]
transform = Transform( 0.888409, 0, -0.459053, 0, 1, 0, 0.459053, 0, 0.888409, 1.30605, 0, -154.593 )
shape = SubResource( 4 )

[node name="Zone03" type="Area" parent="ZoneLoader"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.60408, -299.305 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 6 )
zone_path = "res://demo/zones/zone_03.tscn"

[node name="CollisionShape" type="CollisionShape" parent="ZoneLoader/Zone03"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 103.504, 0, 0 )
shape = SubResource( 5 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiniMap" type="ViewportContainer" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="UI/MiniMap"]
size = Vector2( 200, 200 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="UI/MiniMap/Viewport"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 35.8958, 93.3085, -163.976 )
projection = 1
size = 585.91

[node name="LoadingScreen" type="Panel" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
